--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,7 @@ DB_HOST = 127.0.0.1
 DB_PORT = 3306
 DB_NAME = 
 DB_USER = 
-DB_PASSWORD = 
-
+DB_PASS = 
 WORKER_COUNT = 
-
+TIME_ZONE = 
 APP_SALT = 
