--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "illuminate/database": "^9.40",
     "symfony/var-dumper": "^6.2",
     "rakit/validation": "^1.4",
-    "vlucas/phpdotenv": "^5.5"
+    "vlucas/phpdotenv": "^5.5",
+    "symfony/console": "^6.2"
   },
   "suggest": {
     "ext-event": "For better performance. "
