新增 对腾讯云函数的支持

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-DB_HOST = 127.0.0.1
-DB_PORT = 3306
-DB_NAME = 
-DB_USER = 
-DB_PASS = 
-WORKER_COUNT = 
-TIME_ZONE = 
-APP_SALT = 
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_NAME=
+DB_USER=
+DB_PASS=
+WORKER_COUNT=1
+SERVER_PORT=
+TIME_ZONE=
+APP_SALT=
